# impactshala

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
backend/: .dockerignore  .env  Dockerfile  main.py  requirements.txt  supabase_migration.sql
recommendation-system/: .env  .env.example  README.md  alembic.ini  conftest.py  pyproject.toml  requirements.txt
recommendation-system/alembic/: env.py
recommendation-system/alembic/versions/: 0001_initial_schema.py
recommendation-system/apps/api/: config.py  database.py  main.py
recommendation-system/apps/api/routers/: admin.py  events.py  experiments.py  feed.py
recommendation-system/apps/simulator/: generate.py
recommendation-system/apps/worker/: celery_app.py  tasks.py
recommendation-system/data/: content_embeddings.index  content_id_map.json
recommendation-system/infra/: Dockerfile  docker-compose.yml
recommendation-system/infra/redis/: redis.conf
recommendation-system/tests/: test_candidates.py  test_features.py  test_filters.py  test_ranking.py
src/: App.tsx  index.css
src/components/: CommentSection.tsx  CreatePostModal.tsx  EventModal.tsx  GetInTouchModal.tsx  PhotoUploadModal.tsx  PollModal.tsx  PostCard.tsx  PostCardSkeleton.tsx  RightPanel.tsx  ShareModal.tsx  ShareProfileModal.tsx  Sidebar.tsx  TopBar.tsx  VisibleToDropdown.tsx
src/hooks/: useAccountUpdate.ts  useDiscover.ts  useNotifications.ts  useProfile.ts  useRequireAuth.ts
src/lib/: authToken.ts  cn.ts  supabase.ts
src/pages/: DiscoverPage.tsx  (+9 more)
(+122 files in other folders)
